// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: false, dismissButton: false, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: false, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: false, dismissButton: true, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: true, dismissButton: false, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: true, dismissButton: false, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: auto 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
@media (prefers-color-scheme: dark) {
  .scroller {
    background: rgba(0,0,0,.01);
  }
  .modal {
    color: #FBFCFF;
    background: #0E0E12;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: blur, fullscreen: true, dismissButton: true, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: shading, fullscreen: false, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: shading, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: auto 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
@media (prefers-color-scheme: dark) {
  .scroller {
    background: rgba(0,0,0,.01);
  }
  .modal {
    color: #FBFCFF;
    background: #0E0E12;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, backdrop: shading, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), background-color var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: { base: true, xs: false, s: true, m: false, l: true, xl: false }, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(1, 2, 5, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@media(min-width:480px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-top-left-radius: 8px !important;
    border-top-right-radius: 8px !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-bottom-left-radius: 8px !important;
    border-bottom-right-radius: 8px !important;
  }
}

@media(min-width:760px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-top-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
  }
}

@media(min-width:1000px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-top-left-radius: 8px !important;
    border-top-right-radius: 8px !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-bottom-left-radius: 8px !important;
    border-bottom-right-radius: 8px !important;
  }
}

@media(min-width:1300px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-top-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
  }
}

@media(min-width:1760px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-top-left-radius: 8px !important;
    border-top-right-radius: 8px !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-bottom-left-radius: 8px !important;
    border-bottom-right-radius: 8px !important;
  }
}

@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
@media(min-width:480px) {
  .modal {
    width: var(--p-modal-width,auto);
    min-width: 276px;
    max-width: 1535.5px;
    place-self: center;
    margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
    border-radius: 8px;
  }
}

@media(min-width:760px) {
  .modal {
    width: auto;
    min-width: auto;
    max-width: none;
    place-self: stretch;
    margin: 0;
    border-radius: 0;
  }
}

@media(min-width:1000px) {
  .modal {
    width: var(--p-modal-width,auto);
    min-width: 276px;
    max-width: 1535.5px;
    place-self: center;
    margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
    border-radius: 8px;
  }
}

@media(min-width:1300px) {
  .modal {
    width: auto;
    min-width: auto;
    max-width: none;
    place-self: stretch;
    margin: 0;
    border-radius: 0;
  }
}

@media(min-width:1760px) {
  .modal {
    width: var(--p-modal-width,auto);
    min-width: 276px;
    max-width: 1535.5px;
    place-self: center;
    margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
    border-radius: 8px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: false, dismissButton: false, hasHeader: false, hasFooter: true and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=footer] {
  position: sticky;
  bottom: -.1px;
  transform: translateZ(0);
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  margin-block: -16px -16px;
  background: #FFF;
  clip-path: inset(-20px 0 0 0);
  transition: box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-column: 1/-1;
  z-index: 1;
}
slot[name=footer][data-stuck] {
  box-shadow: rgba(204, 204, 204, 0.35) 0 -5px 10px;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(1, 2, 5, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: false, dismissButton: false, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(38, 38, 41, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: false, dismissButton: false, hasHeader: true, hasFooter: true and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=footer] {
  position: sticky;
  bottom: -.1px;
  transform: translateZ(0);
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  margin-block: -16px -16px;
  background: #0E0E12;
  clip-path: inset(-20px 0 0 0);
  transition: box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-column: 1/-1;
  z-index: 1;
}
slot[name=footer][data-stuck] {
  box-shadow: rgba(0, 0, 0, 0.6) 0 -5px 10px;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(38, 38, 41, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: false, dismissButton: true, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(38, 38, 41, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: false, dismissButton: true, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 8px !important;
  border-bottom-right-radius: 8px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 8px !important;
  border-top-right-radius: 8px !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(1, 2, 5, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: 8px;
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: true, dismissButton: false, hasHeader: false, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(38, 38, 41, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: true, dismissButton: false, hasHeader: true, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(1, 2, 5, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: true, dismissButton: true, hasHeader: false, hasFooter: false and theme: light 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-block-start: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(1, 2, 5, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;

exports[`getComponentCss() should return correct css for open: true, backdrop: blur, fullscreen: true, dismissButton: true, hasHeader: true, hasFooter: false and theme: dark 1`] = `
":host {
  display: block;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(.stretch-to-full-modal-width) {
  display: block !important;
  margin: 0 calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  width: calc(100% + calc(clamp(32px, 2.75vw + 23px, 76px) * 2)) !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-block-end: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) * -1) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=heading],h1,h2,h3,h4,h5,h6 {
  grid-row-start: 1;
  grid-column: 2/3;
  z-index: 0;
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
}
:is(h1,h2,h3,h4,h5,h6) ~ slot:first-of-type {
  grid-row-start: auto;
}
::slotted([slot="heading"]:is(h1,h2,h3,h4,h5,h6)) {
  margin: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: rgba(38, 38, 41, 0.67);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), overlay var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(0,0,0,.01);
}
.modal {
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-block: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.dismiss {
  --p-internal-button-scaling: 0;
  grid-area: 1/3;
  z-index: 2;
  position: sticky;
  inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
  margin-block-start: calc(clamp(16px, 1.25vw + 12px, 36px) * -1);
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}"
`;
